<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Отель</string>
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="name">Имя</string>
    <string name="email">Email</string>
    <string name="username_or_email">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="click_to_login">Нажмите для входа</string>
    <string name="click_to_register">Нажмите для регистрации</string>
</resources>